--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: '3'
 services:
   app:
     build:
@@ -10,4 +10,5 @@ services:
     volumes:
       - .:/app
     container_name: front-shop
-    command: npm start
+    command: >
+      sh -c "npm install && npm start"
