--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    image: leonidll/front-end
+    image: leonidll/front-master-shop
     ports:
       - "8083:3000"
     volumes:
